--- a/src/components/AddHero.css
+++ b/src/components/AddHero.css
@@ -1,3 +1,16 @@
-Button{
-    margin-top: 15px;
-}
+#squareSearch {
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    margin-top: 5%;
+    margin-bottom: 2%;
+  }
+  
+  #textColor{
+    color: #ced4dd;
+  }
+
+  #padding{
+    padding: 2%;
+    padding-bottom: 10%;
+  }
